tests/neg-custom-args/captures/lazylists2.check
-- [E163] Declaration Error: tests/neg-custom-args/captures/lazylists2.scala:50:10 -------------------------------------
50 |      def tail: {xs, f} LazyList[B] = xs.tail.map(f) // error
   |          ^
   |          error overriding method tail in trait LazyList of type -> {Mapped.this} LazyList[B];
   |            method tail of type -> {xs, f} LazyList[B] has incompatible type
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/lazylists2.scala:18:4 ------------------------------------
18 |    final class Mapped extends LazyList[B]:  // error
   |    ^
   |    Found:    {f, xs} LazyList[? B]
   |    Required: {f} LazyList[B]
19 |      this: ({xs, f} Mapped) =>
20 |      def isEmpty = false
21 |      def head: B = f(xs.head)
22 |      def tail: {this} LazyList[B] = xs.tail.map(f)
23 |    new Mapped
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/lazylists2.scala:27:4 ------------------------------------
27 |    final class Mapped extends LazyList[B]:  // error
   |    ^
   |    Found:    {f, xs} LazyList[? B]
   |    Required: {xs} LazyList[B]
28 |      this: ({xs, f} Mapped) =>
29 |      def isEmpty = false
30 |      def head: B = f(xs.head)
31 |      def tail: {this} LazyList[B] = xs.tail.map(f)
32 |    new Mapped
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/lazylists2.scala:40:20 --------------------------------------------------------
40 |      def head: B = f(xs.head)  // error
   |                    ^
   |(f : A => B) cannot be referenced here; it is not included in the allowed capture set {xs} of the self type of class Mapped
-- Error: tests/neg-custom-args/captures/lazylists2.scala:41:49 --------------------------------------------------------
41 |      def tail: {this} LazyList[B] = xs.tail.map(f) // error
   |                                                 ^
   |(f : A => B) cannot be referenced here; it is not included in the allowed capture set {xs} of the self type of class Mapped
-- Error: tests/neg-custom-args/captures/lazylists2.scala:60:10 --------------------------------------------------------
60 |    class Mapped2 extends Mapped:  // error
   |    ^
   |    references {f, xs} are not all included in allowed capture set {} of the self type of class Mapped2
61 |      this: Mapped =>
